--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.368.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
