--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "convex": "^1.24.1",
     "framer-motion": "^11.1.1",
     "lucide-react": "^0.368.0",
     "mini-svg-data-uri": "^1.4.4",
